modify unit tests